# Invest

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/etf-analysis-review/: SKILL.md
.agents/skills/financial-statement-review/: SKILL.md
.agents/skills/kr-stock-analysis-review/: SKILL.md
.agents/skills/market-move-explainer/: SKILL.md
.agents/skills/risk-manager-investment-memo/: SKILL.md
companies/: holdings.example.yaml  holdings.yaml  portfolio_profile.example.yaml  thesis_tracker.example.yaml  watchlist.example.yaml  watchlist.yaml
data/cache/: .gitkeep  sec_company_tickers.json
data/normalized/: AAPL_sec_normalized.json  KO_sec_normalized.json  MSFT_sec_normalized.json
data/reports/: AAPL_2026-04-29_bundle.md  AAPL_2026-05-12_bundle.md  KO_2026-05-12_bundle.md  MSFT_2026-05-12_bundle.md
docs/: verification.md
memos/: 2026-05-12_aapl_msft_ko_add_buy_memo.md
scripts/: build_analysis_bundle.py  build_context_pack.py  fetch_dart_financials.py  fetch_price_snapshot.py  fetch_sec_companyfacts.py  invest_utils.py  normalize_financials.py  portfolio_snapshot.py  portfolio_utils.py  resolve_company.py  update_asset_bundle.py  update_company_bundle.py
skills/risk-manager-investment-memo/: SKILL.md
skills/us-stock-decision-workflow/: SKILL.md
tests/: test_fetch_sec_companyfacts.py  test_financial_pipeline.py  test_invest_utils.py  test_portfolio_workflow.py  test_price_snapshot.py  test_resolve_company.py  test_scripts_cli_smoke.py  test_skill_routing_policy.py  test_update_company_bundle.py
(+17 files in other folders)
