[project]
name = "invest-workspace"
version = "0.1.0"
description = "Project-local investment research data pipeline."
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.9",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

